[package]
name = "mdio"
version = "0.1.2"
authors = ["mitchmindtree <mail@mitchellnordine.com>"]
description = "An implementation of Management Data Input/Output."
keywords = ["ethernet", "phy", "smi", "miim", "rmii"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/mdio.git"
homepage = "https://github.com/mitchmindtree/mdio"
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"], optional = true }
nb = { version = "1", optional = true }

[features]
bitbang = ["embedded-hal", "nb"]

[package.metadata.docs.rs]
all-features = true
